@@ -1,5 +1,6 @@
 1.19.1 /
 [Alexandr Topilski]
+- Auto revert views after queries
 
 1.19.0 / October 8, 2018
 [Alexandr Topilski]
